config/application-name/deployment.yaml
#@ load("application-name.lib.star", "app")

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application-name-server
spec:
  selector:
    matchLabels: #@ app.labels
  template:
    metadata:
      labels: #@ app.labels
    spec:
      containers:
        - name: webserver
          #! built from ./src/application-name/Dockerfile
          image: jtigger/application-name:latest
