config/application-name/service.yaml
#@ load("application-name.lib.star", "app")

---
apiVersion: v1
kind: Service
metadata:
  name: #@ app.service.name
spec:
  type: NodePort
  selector: #@ app.labels
  ports:
  - port: #@ app.service.port
    targetPort: 80
