config/application-name/ingress.yaml
#@ load("application-name.lib.star", "app")

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: application-name
spec:
  rules:
  - http:
      paths:
      - path: /app
        backend:
          serviceName: #@ app.service.name
          servicePort: #@ app.service.port
